# drf_hw

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: lms_data.json  payment_data.json  users_data.json
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_price_lesson_price.py  0004_course_up_date_lesson_up_date.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_method.py  0004_subscription.py  0005_sendpayment.py
